Did this fix the text wrap for viz

--- a/stylesheetLandingPage.css
+++ b/stylesheetLandingPage.css
@@ -91,7 +91,7 @@ p.viz-page {
     padding-right: 0px;
     padding-bottom: 20px;
     padding-top: 5px;
-    width: 655px;
+    width: 686px;
     margin-left: 2%; 
 }
 
